samples/_failures_safe/1761794005_19e7e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f28cec0c.c: In function ‘main’:
./samples/SAFE/__tmp_f28cec0c.c:165:11: error: expected ‘;’ at end of input
  165 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_f28cec0c.c:165:5: error: expected declaration or statement at end of input
  165 |     printf
      |     ^~~~~~
